crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@labeled_ctor_import_rejects_updates.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type box(..))\ntype box = Box { value : bool }\n\nmodule Main exposing (..)\nimport Types\nchange : Types.box -> Types.box\nchange x = { x | value = Primitive.True }\n"
---
nash::type::update_not_record

  × Cannot update fields of `Types.box`.
   ╭─[/Main.nash:4:18]
 3 │ change : Types.box -> Types.box
 4 │ change x = { x | value = Primitive.True }
   ·                  ─────
   ╰────
  help: Rebuild the value with its constructor.
