crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@labeled_ctor_import_updates.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type box(..))\ntype box = Box { value : bool }\n\nmodule Main exposing (..)\nimport Types\nchange : Types.box -> Types.box\nchange x = { x | value = Primitive.True }\n"
---
{
    "Main": [
        Value {
            name: "change",
        },
    ],
    "Types": [
        Type {
            name: "box",
            constructors_exposed: true,
            kind: "Type",
        },
    ],
}
