crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@labeled_ctor_imported_captured_parameter_stays_shared-2.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type box(..))\ntype box 'a = Box { value : 'a }\n\nmodule Main exposing (..)\nimport Types\nbad : Types.box 'a -> ('a, bool)\nbad b =\n    let\n        get ignored = b.value\n    in\n    (get Primitive.True, get Primitive.True)\n"
---
nash::warning::unused_variable

  ⚠ Unused variable `ignored`.
   ╭─[/Main.nash:6:13]
 5 │     let
 6 │         get ignored = b.value
   ·             ───────
 7 │     in
   ╰────
  help: Replace `ignored` with `_`.

nash::type::mismatch

  × Type mismatch: expected `( 'a, bool )`, found `( 'a, 'a )`.
   ╭─[/Main.nash:8:5]
 2 │ import Types
 3 │ bad : Types.box 'a -> ('a, bool)
   ·       ─────────────┬────────────
   ·                    ╰── declared type
 4 │ bad b =
 5 │     let
 6 │         get ignored = b.value
 7 │     in
 8 │     (get Primitive.True, get Primitive.True)
   ·     ────────────────────┬───────────────────
   ·                         ╰── body of `bad`
   ╰────
  help: Keep the implementation generic over `'a`, or specialize its annotation.
