crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@labeled_ctor_imported_captured_parameter_stays_shared.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type box(..))\ntype box 'a = Box { value : 'a }\n\nmodule Main exposing (..)\nimport Types\ngood : Types.box 'a -> ('a, 'a)\ngood b =\n    let\n        get ignored = b.value\n    in\n    (get Primitive.True, get Primitive.True)\n"
---
{
    "Main": [
        Value {
            name: "good",
        },
    ],
    "Types": [
        Type {
            name: "box",
            constructors_exposed: true,
            kind: "Type -> Type",
        },
    ],
}
