crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@labeled_ctor_imports_preserve_sugar_and_projection.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type box(..))\ntype box 'a = Box { z : 'a, a : bool }\n\nmodule Main exposing (..)\nimport Types\nmake x = Types.Box { a = Primitive.True, z = x }\nget : Types.box 'a -> 'a\nget x = x.z\npattern (Types.Box { z }) = z\n"
---
{
    "Main": [
        Value {
            name: "get",
        },
        Value {
            name: "make",
        },
        Value {
            name: "pattern",
        },
    ],
    "Types": [
        Type {
            name: "box",
            constructors_exposed: true,
            kind: "Type -> Type",
        },
    ],
}
