crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@labeled_ctor_private_type_returned_by_export_has_no_projection.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (make)\ntype box = Box { value : bool }\nmake = Box Primitive.True\n\nmodule Main exposing (..)\nimport Types\nbad = Types.make.value\n"
---
nash::type::not_a_record

  × Expected a record, found `Types.box`.
   ╭─[/Main.nash:3:7]
 2 │ import Types
 3 │ bad = Types.make.value
   ·       ────────┬───────
   ·               ╰── field `value` of `make`
   ╰────
