crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@nominal_record_literal_deduplicates_exposed_and_qualified_alias.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type point)\ntype alias point = { x : bool }\n\nmodule Main exposing (..)\nimport Types exposing (type point)\nvalue = { x = Primitive.True }\n"
---
{
    "Main": [
        Value {
            name: "value",
        },
    ],
    "Types": [
        Type {
            name: "point",
            constructors_exposed: false,
            kind: "Type",
        },
    ],
}
